--- a/python/src/bento_sts/templates/about-sts.html
+++ b/python/src/bento_sts/templates/about-sts.html
@@ -1,6 +1,6 @@
 <h4>Simple Terminology Service (STS)</h4>
 
-The STS is a front-end for browsing and using data model information stored in a Metamodel Database (MDB). Models are represented as <a href="https://en.wikipedia.org/wiki/Graph_database#Labeled-property_graph">labeled property graphs</a>, having:
+Theee STS is a front-end for browsing and using data model information stored in a Metamodel Database (MDB). Models are represented as <a href="https://en.wikipedia.org/wiki/Graph_database#Labeled-property_graph">labeled property graphs</a>, having:
 <ul>
   <li>Nodes (logical data groupings, similar to table rows),</li>
   <li>Relationships (logical associations between Nodes, similar to foreign key relationships between tables),</li>
