--- a/python/src/bento_sts/templates/mdb-model.html
+++ b/python/src/bento_sts/templates/mdb-model.html
@@ -9,7 +9,7 @@
     <br><br>
       <table class="table table-striped">
          <tr>
-	   <th>Handle</th><th>Name</th><th>Repository</th>
+	   <th>Handle</th><th>Name</th><th>Repository</th><th>Repository</th><th>Test</th>
          </tr>
          {% for item in mdb %}
 	 <tr>
